--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,19 @@
     <title></title>
   </head>
   <body>
-    Count {{ .Count }}
+    <header>
+      <h1>htmx-server</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/board">Board</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+    Count das {{ .Count }}
+    <script async type="text/javascript" src="/static/htmx.min.js"></script>
   </body>
 </html>
 {{ end }}
